added comments for users to instruct them on how to use the file

--- a/.env-example
+++ b/.env-example
@@ -1,1 +1,2 @@
-TEST_AUDIO_FILE_PATH="/path/to/your/file.txt"
+# Duplicate the file and rename to .env and add your secrets here!
+TEST_AUDIO_FILE_PATH = "/path/to/your/file.txt"
